# RaySpace3D

./: .gitignore  CMakeLists.txt  README.md  README_vcpkg.md  RESTRUCTURE_COMPLETE.md  SELECTIVITY_ESTIMATION.md  environment-linux.yml  environment-windows.yml  environment.yml  estimate_test.json  estimated_intersection_timing.json  estimated_overlap_timing.json  mesh_intersection_timing.json  mesh_overlap_timing.json  preprocessing_query.json  preprocessing_shape_net.json  preprocessing_timing.json  requirements.txt  test_compact_results.json  vcpkg.json
cmake/: FindOptiX.cmake
common/: CMakeLists.txt
common/include/: BinaryIO.h  DatasetUtils.cpp  DatasetUtils.h  Geometry.h  GridCell.h  PinnedMemory.h  common.h  triangulation.h
common/src/: timer.cpp  triangulation.cpp
generated_files/: check_n_geometry.pre  cubes_1_cubes_2_overlap_timing.json  cubes_1_preprocess_timing.json  cubes_2_preprocess_timing.json  cubes_overlap_timing.json  filter_refine_timing.json  mesh_overlap_timing.json  shape_net_bbox.json  shape_net_timing.json  simple_test.txt  simple_test_overlap_timing.json  simple_test_preprocess_timing.json  simple_test_timing.json  test_cubes_1_preprocess_timing.json  test_cubes_2_preprocess_timing.json  test_cubes_overlap_no_est.json  test_cubes_overlap_with_est.json  test_small_n_nv15_nu30_vs100_r30.dt
preprocess/: CMakeLists.txt  environment-linux.yml  environment-windows.yml  environment.yml
preprocess/src/: DatasetLoaderFactory.cpp  DatasetLoaderFactory.h  DtMeshDatasetLoader.cpp  DtMeshDatasetLoader.h  EdgePreprocessor.cpp  EdgePreprocessor.h  IDatasetLoader.h  ObjMeshDatasetLoader.cpp  ObjMeshDatasetLoader.h  PolygonDatasetLoader.cpp  PolygonDatasetLoader.h  preprocess_dataset.cpp
preprocess/src/tdbase_lib/geometry/: computing_cpu.cpp  geometry_computer.cpp
preprocess/src/tdbase_lib/include/: aab.h  geometry.h  himesh.h  index.h  mygpu.h  query_context.h  tile.h  util.h
preprocess/src/tdbase_lib/spatial/: himesh.cpp  himesh_IO.cpp  himesh_box.cpp  himesh_decomp.cpp  himesh_skeleton.cpp  himesh_wrapper.cpp
preprocess/src/tdbase_lib/storage/: tile.cpp  tile_IO.cpp
query/: CMakeLists.txt  MESH_OVERLAP_DEBUG_ANALYSIS.md  environment-linux.yml  environment-windows.yml
query/cmake/: FindOptiX.cmake
query/src/: ptx_utils.h  timer.cpp  timer.h
query/src/applications/: app_cli_options.h  rayspace_filter_refine_main.cpp  rayspace_intersection_estimated_main.cpp  rayspace_main.cpp  rayspace_mesh_intersection_main.cpp  rayspace_mesh_overlap_main.cpp  raytracer_containment_main.cpp  raytracer_intersection_estimated_main.cpp  raytracer_overlap_direct_estimation_main.cpp  raytracer_overlap_estimated_main.cpp
query/src/cuda/: estimated_intersection.cu  estimated_intersection.h  estimated_overlap.cu  estimated_overlap.h  mesh_containment.cu  mesh_containment.h  mesh_intersection.cu  mesh_intersection.h  mesh_intersection_anyhit.cu  mesh_overlap.cu  mesh_overlap.h  mesh_overlap_deduplication.cu  mesh_overlap_deduplication.h  mesh_overlap_edges.cu  mesh_query_deduplication.cu  mesh_query_deduplication.h  optix_common_shaders.cuh  raytracing.cu  raytracing_intersection_count.cu  result_compaction.cu  result_compaction.h  scan_utils.cu  scan_utils.h  selectivity_estimation.cu  selectivity_estimation.h
query/src/geometry/: BoundingBox.cpp  BoundingBox.h  EdgeExtractor.cpp  EdgeExtractor.h  GeometryUploader.cpp  GeometryUploader.h  PrecomputedEdgeData.cpp  PrecomputedEdgeData.h
query/src/optix/: OptixAccelerationStructure.h  OptixContext.h  OptixHelpers.h  OptixPipeline.cpp  OptixPipeline.h
query/src/raytracing/: FilterRefine.cpp  FilterRefine.h  MeshContainmentLauncher.cpp  MeshContainmentLauncher.h  MeshIntersectionLauncher.cpp  MeshIntersectionLauncher.h  MeshOverlapEdgesLauncher.cpp  MeshOverlapEdgesLauncher.h  MeshOverlapLauncher.cpp  MeshOverlapLauncher.h  RayLauncher.cpp  RayLauncher.h  ResultProcessor.cpp  ResultProcessor.h
query/src/runtime/: GeometryIO.cpp  GeometryIO.h  PointIO.cpp  PointIO.h
query/src/utilities/: ContainmentTracking.h  PairHitTracking.h
scripts/: README_grid_benchmark.md  build.ps1  build.sh  build_preprocess.ps1  build_query.ps1  conda-run.ps1  generate_cubes_by_selectivity.py  generate_diagonal_points.py  generate_meshes_by_selectivity.py  generate_points_in_bbox.py  generate_test_cubes.py  grid_query_benchmark.py  kill_locks.ps1
scripts/cpp_generator/: generate_spheres  generate_spheres.cpp
src/: common.h  dataset_loader.cpp  dataset_loader.h  main.cpp  preprocess_dataset.cpp  ptx_utils.h  rayspace.cpp  rayspace_filter_refine.cpp  raytracing.cu  raytracing_intersection_count.cu  raytracing_old.cu  result_compaction.cu  result_compaction.h  timer.cpp  timer.h  triangulate_dataset.cpp  triangulate_single_polygon.cpp  triangulation.h
src/applications/: rayspace_filter_refine_main.cpp  rayspace_main.cpp  rayspace_mesh_overlap_main.cpp
src/cuda/: mesh_overlap.cu  mesh_overlap.h  mesh_overlap_deduplication.cu  mesh_overlap_deduplication.h  raytracing.cu  raytracing_intersection_count.cu  result_compaction.cu  result_compaction.h  scan_utils.cu
src/dataset/common/: Geometry.h  PinnedMemory.h
src/dataset/preprocess/: DatasetLoaderFactory.cpp  DatasetLoaderFactory.h  IDatasetLoader.h  MeshDatasetLoader.cpp  MeshDatasetLoader.h  PolygonDatasetLoader.cpp  PolygonDatasetLoader.h
src/dataset/runtime/: GeometryIO.cpp  GeometryIO.h  PointIO.cpp  PointIO.h
src/geometry/: BoundingBox.cpp  BoundingBox.h  GeometryUploader.cpp  GeometryUploader.h
src/optix/: OptixAccelerationStructure.cpp  OptixAccelerationStructure.h  OptixContext.cpp  OptixContext.h  OptixHelpers.h  OptixPipeline.h
src/raytracing/: FilterRefine.cpp  FilterRefine.h  MeshOverlapLauncher.cpp  MeshOverlapLauncher.h  RayLauncher.cpp  RayLauncher.h  ResultProcessor.cpp  ResultProcessor.h
